--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "java.project.sourcePaths": [
-        "properties",
-        "src"
+        "Client/properties",
+        "Server/properties",
+        "Client/src",
+        "Server/src",
     ]
 }
