updated Date and customer address field

--- a/Server/.vscode/settings.json
+++ b/Server/.vscode/settings.json
@@ -2,5 +2,9 @@
     "java.project.sourcePaths": [
         "src",
         "properties"
+    ],
+    "java.project.referencedLibraries": [
+        "lib/**/*.jar",
+        "c:\\Users\\shawn\\Downloads\\mysql-connector-java-8.0.30\\mysql-connector-java-8.0.30\\mysql-connector-java-8.0.30.jar"
     ]
 }
