add library files

--- a/Server/.vscode/settings.json
+++ b/Server/.vscode/settings.json
@@ -3,9 +3,12 @@
         "src",
         "properties"
     ],
-    "java.project.referencedLibraries": [
-        "lib/**/*.jar",
-        "c:\\Users\\shawn\\Downloads\\mysql-connector-java-8.0.30\\mysql-connector-java-8.0.30\\mysql-connector-java-8.0.30.jar",
-        "c:\\Users\\shawn\\Downloads\\hibernate-core-5.2.12.Final.jar"
-    ]
+    "java.project.referencedLibraries": {
+        "include": [
+            "lib/**/*.jar"
+        ],
+        "exclude": [
+            "c:\\Users\\shawn\\Downloads\\hibernate-core-5.2.12.Final.jar"
+        ]
+    }
 }
