--- a/Server/.vscode/settings.json
+++ b/Server/.vscode/settings.json
@@ -5,7 +5,10 @@
     ],
     "java.project.referencedLibraries": {
         "include": [
-            "lib/**/*.jar"
+            "lib/**/*.jar",
+            "c:\\Users\\shawn\\Documents\\JAVA_PROJECTS\\AP_LABS\\CIT3009_Project\\Jar_Libraries\\jakarta.persistence-api-2.2.3.jar",
+            "c:\\Users\\shawn\\Documents\\JAVA_PROJECTS\\AP_LABS\\CIT3009_Project\\Jar_Libraries\\mysql-connector-java-8.0.30.jar",
+            "c:\\Users\\shawn\\Documents\\JAVA_PROJECTS\\AP_LABS\\CIT3009_Project\\Jar_Libraries\\hibernate-core-5.2.12.Final.jar"
         ],
         "exclude": [
             "c:\\Users\\shawn\\Downloads\\hibernate-core-5.2.12.Final.jar"
