--- a/properties/log4j2.properties
+++ b/properties/log4j2.properties
@@ -14,9 +14,7 @@ appender.file.layout.type = PatternLayout
 appender.file.layout.pattern = [%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 
 loggers = file
-#<!-- Package name where java file is located--> 
-logger.file.name = domain
-#<!-- Lowest level of logging allowed -->
+logger.file.name = server
 logger.file.level = trace
 logger.file.appenderRefs = file
 logger.file.appenderRef.file.ref = LOGFILE
