--- a/.classpath
+++ b/.classpath
@@ -7,8 +7,8 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/apache-log4j-2.18.0-bin/log4j-api-2.18.0.jar"/>
-	<classpathentry kind="lib" path="C:/apache-log4j-2.18.0-bin/log4j-core-2.18.0.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-api-2.18.0.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-core-2.18.0.jar"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-8.0.30.jar"/>
 	<classpathentry kind="lib" path="lib/hibernate-core-5.2.12.Final.jar"/>
 	<classpathentry kind="lib" path="lib/commons-validator-1.7.jar"/>
