--- a/.classpath
+++ b/.classpath
@@ -7,11 +7,11 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/log4j-api-2.18.0.jar"/>
-	<classpathentry kind="lib" path="lib/log4j-core-2.18.0.jar"/>
-	<classpathentry kind="lib" path="lib/mysql-connector-java-8.0.30.jar"/>
-	<classpathentry kind="lib" path="lib/hibernate-core-5.2.12.Final.jar"/>
-	<classpathentry kind="lib" path="lib/commons-validator-1.7.jar"/>
-	<classpathentry kind="lib" path="lib/jakarta.persistence-api-2.2.3.jar"/>
+	<classpathentry kind="lib" path="libs/log4j-api-2.18.0.jar"/>
+	<classpathentry kind="lib" path="libs/log4j-core-2.18.0.jar"/>
+	<classpathentry kind="lib" path="libs/mysql-connector-java-8.0.30.jar"/>
+	<classpathentry kind="lib" path="libs/hibernate-core-5.2.12.Final.jar"/>
+	<classpathentry kind="lib" path="libs/commons-validator-1.7.jar"/>
+	<classpathentry kind="lib" path="libs/jakarta.persistence-api-2.2.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
